uses @base-ui-components/react instead of radix-ui

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -191,3 +191,7 @@
 @utility editor-text-underlineStrikethrough {
 	text-decoration: underline line-through;
 }
+
+@utility root {
+	isolation: isolate;
+}
